--- a/scss/global.scss
+++ b/scss/global.scss
@@ -914,4 +914,5 @@ a {
   // padding: 20px 15px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   transition: all 1s;
+  color: #000;
 }
