--- a/css/global.css
+++ b/css/global.css
@@ -749,4 +749,13 @@ a {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   transition: all 1s;
   color: #000;
+}
+
+@media screen and (max-width: 1045px) {
+  .accordion-left-top {
+    justify-content: start !important;
+  }
+  .accordion_span1 {
+    margin-right: 10px;
+  }
 }/*# sourceMappingURL=global.css.map */
